# environmental-monitoring

./: Dockerfile  README.md  pyproject.toml
analysis/: read_data.py
app/: exceptions.py  main.py
app/templates/: description.html  pure-min.css  styles.css
data/: corrected_version.xlsx
emo/: main.py  paths.py
